prevent page jump if already on section

--- a/css/style.css
+++ b/css/style.css
@@ -913,7 +913,7 @@ button{
 		right: 0;
 	}
 	body{
-		background-color: blue !important;
+		/*background-color: blue !important;*/
 	}
 	h2 { 
 		font-size: 24px;
@@ -1027,7 +1027,7 @@ button{
 		width: 970px;
 	}
 	body{
-		background-color: yellow !important;
+		/*background-color: yellow !important;*/
 	}
 	h2 { 
 		font-size: 24px;
@@ -1125,7 +1125,7 @@ button{
 		width: 1170px;
 	}	
 	body{
-		background-color: gray !important;
+		/*background-color: gray !important;*/
 	}
 	h2 { 
 		font-size: 24px;
